--- a/src/router/router-test.html
+++ b/src/router/router-test.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
-  <html>
-    <head>
-      <meta charset="utf-8">
-      <title>AngularTS</title>
-      <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
-      <script type="module" src="../index.js"></script>
-      <script> 
-        document.addEventListener("DOMContentLoaded", () => {
-               window.angular.module("router", []).config([
-              "$stateProvider",
-              "$locationProvider",
-              ($stateProvider, $locationProvider) => {
-                $locationProvider.html5ModeConf = {
-                  enabled: true,
-                  requireBase: false,
-                  rewriteLinks: false,
-                };
-                $stateProvider
-                  .state({
-                    name: "home",
-                    url: "/src/router/router-test.html",
-                    template: "<h3>Success</h3>",
-                  });
-              },
-            ]);
-        });
-      </script>
-    </head>
-    <body ng-app="router">
-      <ng-view></ng-view>
-    </body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>AngularTS</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
+    <script type="module" src="../index.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        window.angular.module("router", []).config([
+          "$stateProvider",
+          "$locationProvider",
+          ($stateProvider, $locationProvider) => {
+            $locationProvider.html5ModeConf = {
+              enabled: true,
+              requireBase: false,
+              rewriteLinks: false,
+            };
+            $stateProvider.state({
+              name: "home",
+              url: "/src/router/router-test.html",
+              template: "<h3>Success</h3>",
+            });
+          },
+        ]);
+      });
+    </script>
+  </head>
+  <body ng-app="router">
+    <ng-view></ng-view>
+  </body>
 </html>
