Cont refactor on compile

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
                 new Todo("Learn AngularTS"),
                 new Todo("Build an AngularTS app"),
               ];
-              window.test = this
-              setInterval(() => { 
-                window.test = $element.controller()
-              }, 100);
+              window.test = this;
             }
 
             get() {
